make source code compilable